feat: FreshStoreSystem v2.0 - 生鲜门店管理系统
- bcrypt密码加密 (12轮加盐)
- 修改密码功能
- 仪表盘统计面板 (6个统计卡片 + 低库存预警)
- 销售自动计算金额 + 库存校验 + 自动扣减
- 表格排序/搜索/筛选/CSV导出/F5刷新
- 角色权限控制 (管理员/采购员/销售员)
- 75个测试 (单元测试 + 集成测试)
- Java 24 + SQLite + Swing 三层架构